--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bciplayer",
   "version": "0.1.0",
+  "author": "Ina Widmer, Michael Job",
   "private": true,
   "dependencies": {
     "node-sass-chokidar": "^1.2.2",
@@ -21,6 +22,5 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
-    "webpack": "^4.7.0"
   }
 }
